<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>poultry_rob_bridge</name>
  <version>0.1.0</version>
  <description>Unix-domain-socket ↔ ROS 2 Humble bridge for poultry farm sensing data (protobuf / custom msgs)</description>
  <maintainer email="dev@example.com">Max De Muirier</maintainer>
  <license>MIT</license>

  <!-- Build tooling -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Runtime: ROS 2 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Custom messages (built by sibling package) -->
  <exec_depend>poultry_rob_bridge_msgs</exec_depend>

  <!-- Python protobuf runtime (installed via pip in Dockerfile) -->
  <exec_depend>python3-protobuf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
